site/docs/v0.4.1/en/components/progress.mdx
# Progress

Progress shows completion for a task with a known start and end and provides a readable current value whenever one is available.

<Preview class="w-full max-w-sm">
<div class="grid w-full gap-3" data-progress-primary-demo="en">
  <p class="text-sm text-muted-foreground" data-progress-status aria-live="polite">66% complete</p>
  <div id="progress-demo" class="progress" role="progressbar" aria-label="Loading" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" data-progress-bar>
    <span style="width: 66%"></span>
  </div>
  <div class="flex gap-2">
    <button type="button" class="btn" data-size="sm" data-progress-action="set-100" data-preview-onclick onclick="const demo=this.closest('[data-progress-primary-demo]'); const bar=demo.querySelector('[data-progress-bar]'); const fill=bar.querySelector('span'); const status=demo.querySelector('[data-progress-status]'); bar.setAttribute('aria-valuenow','100'); fill.style.width='100%'; status.textContent='100% complete';">Complete</button>
    <button type="button" class="btn" data-size="sm" data-variant="outline" data-progress-action="set-0" data-preview-onclick onclick="const demo=this.closest('[data-progress-primary-demo]'); const bar=demo.querySelector('[data-progress-bar]'); const fill=bar.querySelector('span'); const status=demo.querySelector('[data-progress-status]'); bar.setAttribute('aria-valuenow','0'); fill.style.width='0%'; status.textContent='0% complete';">Reset</button>
  </div>
</div>
</Preview>

## Usage

<Steps>
  <Step title="Include CSS">

Import Tailwind and one full A3S UI style bundle.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

Or import only the base CSS, Progress component CSS, and one style pack.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/progress.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

Using CDN or bundler imports? See the [Installation page](/installation).

  </Step>
  <Step title="Add your progress HTML">

Add `class="progress"` and `role="progressbar"` to the root. Use one child `<span>` as the visual indicator.

```html
<div class="progress" role="progressbar" aria-label="Loading" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
  <span style="width: 66%"></span>
</div>
```

  </Step>
</Steps>

### HTML structure

<dl>
  <dt><code>&lt;div class="progress" role="progressbar"&gt;</code></dt>
  <dd>Progress root. Set <code>aria-label</code> or <code>aria-labelledby</code>, plus <code>aria-valuenow</code>, <code>aria-valuemin</code>, and <code>aria-valuemax</code>.</dd>
  <dt><code>&lt;span style="width: ..."&gt;</code></dt>
  <dd>Visual indicator. Its width should match the current value.</dd>
</dl>

## Examples

### Label

<Preview class="w-full max-w-sm">
<div class="field">
  <div class="flex items-center gap-3 text-sm">
    <label id="progress-label">Upload progress</label>
    <output class="ms-auto tabular-nums">66%</output>
  </div>
  <div class="progress" role="progressbar" aria-labelledby="progress-label" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
    <span style="width: 66%"></span>
  </div>
</div>
</Preview>

### RTL

Progress supports `dir="rtl"` on the root or a parent.

<Preview class="w-full max-w-sm">
<div class="field w-full" dir="rtl">
  <label id="progress-upload-rtl" for="progress-upload">تقدم الرفع <span class="ms-auto">٦٦%</span></label>
  <div id="progress-upload" class="progress" role="progressbar" aria-labelledby="progress-upload-rtl" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
    <span style="width: 66%"></span>
  </div>
</div>
</Preview>

## React

```tsx
import { Progress } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <Progress aria-label="Loading" aria-valuenow="66">
      <span style={{ width: "66%" }}></span>
    </Progress>
  );
}
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.

## Vue

```vue
<script setup lang="ts">
import { Progress } from "@a3s-lab/ui/vue";
</script>

<template>
  <Progress aria-label="Loading" aria-valuenow="66">
    <span style="width: 66%"></span>
  </Progress>
</template>
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.
